# cc_factors

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/: data.py
factors/backtesting/: backtesting.py
factors/data/: correlation.py  data.py
factors/vix/: vix.py  vix_backtesting.py
scripts/ci/: lint.sh
tests/: test_factos.py
tests/data/: test_data.py
tests/vix/: test_vix.py  test_vix_backtesting.py
